@@ -44,8 +44,8 @@ public class TestNDB extends AbstractBeanTestCase {
    }
    
    public void testValidation() {
-      validateInput("type", new Integer(-1), IllegalArgumentException.class);
-      validateInput("type", new Integer(11), IllegalArgumentException.class);
+      validateInput("type", Integer.valueOf(-1), IllegalArgumentException.class);
+      validateInput("type", Integer.valueOf(11), IllegalArgumentException.class);
    }
    
    public void testComparator() {
